# dashbook-interpreter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/builtin/: iterator.rs
src/environment/: mod.rs
src/evaluator/: class.rs  functions.rs  mod.rs  objects.rs
src/evaluator/expressions/: binary.rs  mod.rs  unary.rs
src/evaluator/statements/: decl.rs  mod.rs
src/js/: includes.js  mod.rs
src/test/: eval.rs  mod.rs  setup.rs
src/transform/: mod.rs
src/value/: mod.rs
tests/: web.rs
