[package]
authors = ["Jan <jankaul@mailbox.org>"]
edition = "2021"
name = "weblab-interpreter"
version = "0.2.14"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3.21"
js-sys = "0.3.56"
string_cache = "0.8.3"
swc = "0.150.2"
swc_atoms = "0.2.9"
swc_ecma_ast = "0.70.0"
swc_ecma_parser = "0.93.0"
swc_ecma_visit = "0.56.0"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-bindgen-test = "0.3.29"
regex = "1.5.5"
lazy_static = "1.4.0"
ahash = "0.7.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
features = [
    "console",
    "Request",
    "Response",
    "Window",
    "Url",
    "Blob",
    "HtmlElement",
]
version = "0.3.56"

[dependencies.instant]
version = "0.1.12"
features = ["wasm-bindgen"]

[dependencies.swc_common]
features = ["tty-emitter"]
version = "0.17.15"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
