[package]
authors = ["Jan <jankaul@mailbox.org>"]
edition = "2021"
name = "dashbook-interpreter"
version = "0.2.15"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3.25"
js-sys = "0.3.60"
string_cache = "0.8.3"
swc = "0.236.17"
swc_atoms = "0.4.30"
swc_ecma_ast = "0.95.7"
swc_ecma_parser = "0.123.11"
swc_ecma_visit = "0.81.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
regex = "1.7.0"
lazy_static = "1.4.0"
ahash = "0.7.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
features = [
    "console",
    "Request",
    "Response",
    "Window",
    "Url",
    "Blob",
    "HtmlElement",
]
version = "0.3.60"

[dependencies.instant]
version = "0.1.12"
features = ["wasm-bindgen"]

[dependencies.swc_common]
features = ["tty-emitter"]
version = "0.29.23"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
